@@ -65,9 +65,10 @@ class TestConventions {
 		test.jvmArgs(
 				"--add-opens=java.base/java.lang=ALL-UNNAMED",
 				"--add-opens=java.base/java.util=ALL-UNNAMED",
-				"-Djava.locale.providers=COMPAT",
 				"-Xshare:off"
 		);
+		test.getJvmArgumentProviders().add(project.getExtensions()
+				.getByType(SpringFrameworkExtension.class).asArgumentProvider());
 	}
 
 	private void configureTestRetryPlugin(Project project, Test test) {
